--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="/main.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <script src="FindGame.js"></script>
 </head>
 <body>
@@ -28,7 +28,7 @@
 </li>
 </ul>
 </nav>
-<div class="jumbotron">
+<div class="px-3 py-4 px-sm-4 py-sm-5 bg-light rounded-3 mb-3">
 <h1>Error 404</h1>
 <p class="lead">The page cannot be found.</p>
 </div>
