--- a/PLAY/index.html
+++ b/PLAY/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="/main.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <script src="Game.js"></script>
 </head>
 <body>
