--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="/main.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<script>navigator.serviceWorker.register("https://ndev.tk/sw.js")</script>
 <script src="FindGame.js"></script>
 </head>
 <body>
