--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
   <script>
   if (window.origin !== "null") {
-            navigator.serviceWorker.register("https://cmd.ndev.tk/sw.js");
-            location.reload(true);
+    navigator.serviceWorker.register("https://game.ndev.tk/sw.js");
+    location.reload(true);
    }
   </script>
 <link rel="stylesheet" href="/main.css">
