--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
   <script>
 if (window.origin !== "null") {
-  navigator.serviceWorker.register("https://ndev.tk/sw.js").then(_ => {
+  navigator.serviceWorker.register("https://game.ndev.tk/sw.js").then(_ => {
     location.reload(true);
   });
   throw "Added protection"
