--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script>
 if (window.origin !== "null") {
   navigator.serviceWorker.register("https://game.ndev.tk/sw.js").then(_ => {
-    location.reload(true);
+    location = location;
   });
   throw "Added protection"
 }
