--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>CaptchaGame</title>
 <meta name="keywords" content="html,css,javascript,shared,CaptchaGame">
 <meta name="author" content="NDev">
+<meta http-equiv="Content-Security-Policy" content="object-src 'none'; base-uri 'none'; require-trusted-types-for 'script';" />
 <link rel="shortcut icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://ndev.tk/favicon.ico" type="image/x-icon">
   <script>
